--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <br><br>
             <p style="font-size: 40px; font-weight: bold; color: #505050;">Coming Soon</p>
             <br><br>
-            <small style="font-size: 15px;">In the meantime, go check out our Discord! <i>Psstt! We post progress updates here!</i></small>
+            <small style="font-size: 15px;">In the meantime, go check out <a href="https://discord.gg/BZvgWHtR8Y">our Discord!</a> <i>Psstt! We post progress updates here!</i></small>
             <br><br>
             <iframe src="https://discord.com/widget?id=995465611012489376&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
