--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="icon" href="media/logo.png">
+        
+        <!-- Embed -->
+        <meta content="SHRP" property="og:title" />
+        <meta content="Imagine a platform where we ditch the red, and stick with the green. SHRP is an all-new short video sharing platform that doesn't sell your data. Seriously." property="og:description" />
+        <meta content="https://shrp.tv" property="og:url" />
+        <meta content="https://shrp.tv/media/logo.png" property="og:image" />
+        <meta content="#64EB95" data-react-helmet="true" name="theme-color" />
     </head>
     <body>
         <div class="navbar">
