--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
         <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="icon" href="media/logo.png">
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+
+        <!-- Embed -->
+        <meta content="SHRP" property="og:title" />
+        <meta content="Imagine a platform where we ditch the red, and stick with the green. SHRP is an all-new short video sharing platform that doesn't sell your data. Seriously." property="og:description" />
+        <meta content="https://shrp.tv" property="og:url" />
+        <meta content="https://shrp.tv/media/logo.png" property="og:image" />
+        <meta content="#64EB95" data-react-helmet="true" name="theme-color" />
     </head>
     <body>
         <div class="navbar">
@@ -24,7 +32,7 @@
             <br><br>
             <p style="font-size: 40px; font-weight: bold; color: #505050;">Coming Soon</p>
             <br><br>
-            <small style="font-size: 15px;">In the meantime, go check out our Discord! <i>Psstt! We post progress updates here!</i></small>
+            <small style="font-size: 15px;">In the meantime, go check out <a href="https://discord.gg/BZvgWHtR8Y" target="_blank">our Discord!</a> <i>Psstt! We post progress updates here!</i></small>
             <br><br>
             <iframe src="https://discord.com/widget?id=995465611012489376&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
