--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <br><br>
             <p style="font-size: 40px; font-weight: bold; color: #505050;">Coming Soon</p>
             <br><br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/O-NbaVfoo1A?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <br><br>
             <small style="font-size: 0.9rem;">In the meantime, go check out <a href="https://discord.gg/BZvgWHtR8Y" target="_blank">our Discord!</a> <i>Psstt! We post progress updates here!</i></small>
             <br><br>
             <iframe src="https://discord.com/widget?id=995465611012489376&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
